--- a/autovid/src/Navbar/Navbar.css
+++ b/autovid/src/Navbar/Navbar.css
@@ -9,6 +9,8 @@ body {
 .container {
   margin: 1rem;
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .nav {
@@ -42,18 +44,9 @@ body {
   padding: 0.5rem;
 }
 
-.login {
-  background-color: #000053;
-  border-radius: 15px;
-}
-
-.login:hover {
+.nav li.active {
   background-color: #1c1c84;
   border-radius: 15px;
-}
-
-.nav li:active {
-  background-color: #000035;
 }
 
 .nav li:hover {
