--- a/autovid/src/pages/about/About.css
+++ b/autovid/src/pages/about/About.css
@@ -51,3 +51,32 @@ body {
   padding: 1vw;
   text-align: start;
 }
+
+@keyframes sparkle {
+  0% {
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.5),
+      0 0 20px rgba(255, 255, 255, 0.6), 0 0 30px rgba(255, 255, 255, 0.7);
+  }
+  25% {
+    text-shadow: 0 0 15px rgba(255, 255, 255, 0.7),
+      0 0 25px rgba(255, 255, 255, 0.8), 0 0 35px rgba(255, 255, 255, 0.9);
+  }
+  50% {
+    text-shadow: 0 0 20px rgba(255, 255, 255, 0.9),
+      0 0 30px rgba(255, 255, 255, 1), 0 0 40px rgba(255, 255, 255, 1);
+  }
+  75% {
+    text-shadow: 0 0 15px rgba(255, 255, 255, 0.7),
+      0 0 25px rgba(255, 255, 255, 0.8), 0 0 35px rgba(255, 255, 255, 0.9);
+  }
+  100% {
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.5),
+      0 0 20px rgba(255, 255, 255, 0.6), 0 0 30px rgba(255, 255, 255, 0.7);
+  }
+}
+
+.end-text {
+  display: flex;
+  justify-content: flex-end;
+  animation: sparkle 1.5s infinite;
+}
