--- a/autovid/src/pages/contact us/ContactUs.css
+++ b/autovid/src/pages/contact us/ContactUs.css
@@ -1,42 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  max-height: 100%;
-  box-sizing: border-box;
-}
-
-html,
-body {
-  overflow: hidden;
-}
-
-.contact-us-page {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-}
-
-.contact-us-page-video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.contact-us-page-content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  font-size: 1.5vw;
-  font-weight: bold;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  color: white;
-  margin-top: 4.5vw;
-  margin-left: 2.5vw;
-  margin-right: 40vw;
-}
-
 .empty-line {
   height: 1vw;
 }
@@ -49,17 +10,10 @@ body {
   margin-bottom: 2vw;
 }
 
-.contact-us-box {
-  background: rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(10px);
-  border-radius: 20px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
-  width: 100%;
-  padding: 1vw;
-  text-align: start;
-}
-
 .contact-us li {
   list-style-position: inside;
+}
+
+.contact-title {
+  color: rgb(235, 226, 226);
 }
