--- a/autovid/src/pages/CommonlyUsedStyles/PageStyle.css
+++ b/autovid/src/pages/CommonlyUsedStyles/PageStyle.css
@@ -14,6 +14,7 @@ body {
   position: relative;
   width: 100%;
   height: 100vh;
+  align-items: center;
 }
 
 .page-video {
@@ -35,4 +36,17 @@ body {
   margin-top: 4.5vw;
   margin-left: 2.5vw;
   margin-right: 30vw;
+}
+
+.login-register-page-content {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  width: 100%;
 }
