Fixed scaling error for login and register page.

--- a/autovid/src/pages/CommonlyUsedStyles/PageStyle.css
+++ b/autovid/src/pages/CommonlyUsedStyles/PageStyle.css
@@ -40,7 +40,8 @@ body {
 
 .login-register-page-content {
   position: absolute;
-  top: 45%;
+  margin-top: 24.5vw;
+  top: 0;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
