--- a/autovid/src/pages/Home/Home.css
+++ b/autovid/src/pages/Home/Home.css
@@ -20,6 +20,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  background-color: black;
 }
 
 .home-page-content {
@@ -48,7 +49,9 @@ body {
   gap: 16px;
 }
 
-button {
+.sign-in {
+  background-color: #007bff;
+  color: white;
   padding: 1vw 2vw;
   font-size: 2vw;
   font-weight: bold;
@@ -56,11 +59,6 @@ button {
   border-radius: 1vw;
   cursor: pointer;
   transition: background 0.3s ease-in-out, transform 0.2s;
-}
-
-.sign-in {
-  background-color: #007bff;
-  color: white;
 }
 
 .sign-in:hover {
@@ -71,6 +69,13 @@ button {
 .sign-up {
   background-color: #28a745;
   color: white;
+  padding: 1vw 2vw;
+  font-size: 2vw;
+  font-weight: bold;
+  border: none;
+  border-radius: 1vw;
+  cursor: pointer;
+  transition: background 0.3s ease-in-out, transform 0.2s;
 }
 
 .sign-up:hover {
