--- a/autovid/src/pages/login/Login&Register.css
+++ b/autovid/src/pages/login/Login&Register.css
@@ -3,10 +3,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 35vw;
-  max-width: 40vw;
-  min-width: 25vw;
-  height: auto;
+  width: 30vw;
+  max-width: 35vw;
+  min-width: 20vw;
+  height: 32.5vw;
+  max-height: 35vw;
   padding: 2vw;
   background: white;
   border-radius: 2vw;
@@ -45,7 +46,7 @@ body {
 
 .text {
   color: black;
-  font-size: 3.5vw;
+  font-size: 3vw;
   font-weight: 700;
   margin-top: 1vw;
 }
@@ -61,15 +62,15 @@ body {
   margin: 1vw;
   display: flex;
   flex-direction: column;
-  gap: 1.75vw;
+  gap: 1.25vw;
 }
 
 .google-button {
   display: flex;
   align-items: center;
   margin: auto;
-  width: 30vw;
-  height: 5vw;
+  width: 25vw;
+  height: 3.5vw;
   background-color: #eaeaea;
   border-radius: 6px;
   cursor: pointer;
@@ -109,8 +110,8 @@ body {
   display: flex;
   align-items: center;
   margin: auto;
-  width: 30vw;
-  height: 5vw;
+  width: 25vw;
+  height: 3.5vw;
   background-color: #eaeaea;
   border-radius: 6px;
 }
@@ -122,7 +123,7 @@ body {
 }
 
 .input input {
-  height: 5vw;
+  height: 3.5vw;
   width: 40vw;
   background: transparent;
   border: none;
@@ -154,7 +155,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 80%;
-  height: 4vw;
+  height: 3.5vw;
   font-size: 1.5vw;
   color: #fff;
   border-radius: 15px;
@@ -182,7 +183,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 80%;
-  height: 4vw;
+  height: 3.5vw;
   font-size: 1.5vw;
   color: #fff;
   border-radius: 15px;
