--- a/autovid/src/pages/Home/Home.css
+++ b/autovid/src/pages/Home/Home.css
@@ -20,7 +20,9 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  background-color: black;
+  background-size: cover;
+  background-position: center;
+  background-image: url("../pages photos/Rotating Earth.jpg");
 }
 
 .home-page-content {
