--- a/autovid/src/pages/promt to video/PromptToVideo.css
+++ b/autovid/src/pages/promt to video/PromptToVideo.css
@@ -124,7 +124,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 6rem 1rem;
+  margin: 2rem 1rem;
   margin-bottom: 0;
 }
 
@@ -133,7 +133,7 @@ button:hover {
   scroll-behavior: smooth;
   width: 53vw;
   max-width: 55vw;
-  height: 70vh;
+  height: 67.5vh;
   scrollbar-color: rgb(28, 30, 58) rgb(8, 14, 44);
 }
 
@@ -179,6 +179,23 @@ button:hover {
 .send {
   background: transparent;
   border: none;
+}
+
+.inp textarea {
+  font-size: 2rem;
+  padding: 1rem;
+  width: 100%;
+  height: 5rem;
+  resize: vertical;
+  overflow-y: auto;
+  border-radius: 0.5rem;
+  box-sizing: border-box;
+  background-color: #1c1e3a;
+  color: white;
+  border: none;
+  outline: none;
+  resize: none;
+  scrollbar-color: rgb(8, 14, 44) rgb(28, 30, 58);
 }
 
 .main img {
