--- a/autovid/src/pages/login/Login&Register.css
+++ b/autovid/src/pages/login/Login&Register.css
@@ -6,7 +6,7 @@
   width: 30vw;
   max-width: 35vw;
   min-width: 20vw;
-  height: 32.5vw;
+  height: 40vw;
   max-height: 35vw;
   padding: 2vw;
   background: white;
@@ -132,10 +132,9 @@ body {
   font-size: 1.5vw;
 }
 
-.forgot-password {
+.do-not-have-an-account {
   display: flex;
   justify-content: center;
-  margin-top: 0.25vw;
   color: #797979;
   font-size: 1.5vw;
   color: #4c00b4;
