Edited the style of the toast.

--- a/autovid/src/pages/login/Login&Register.css
+++ b/autovid/src/pages/login/Login&Register.css
@@ -219,3 +219,13 @@ body {
   font-weight: bold;
   font-size: 1.25vw;
 }
+
+.custom-toast-success .Toastify__toast-icon svg,
+.custom-toast-success .Toastify__toast-icon {
+  fill: white !important;
+  color: white !important;
+}
+
+.custom-toast-success .Toastify__progress-bar {
+  background: white !important;
+}
