--- a/autovid/src/pages/promt to video/PromptToVideo.css
+++ b/autovid/src/pages/promt to video/PromptToVideo.css
@@ -34,6 +34,7 @@ body {
 
 .upperSide {
   padding: 2.75rem;
+  padding-bottom: 0.75rem;
   border-bottom: 1.5px solid rgb(204, 196, 196);
   height: 75vh;
   display: flex;
@@ -45,6 +46,15 @@ body {
   display: flex;
   align-items: center;
   margin-bottom: 2.5rem;
+}
+
+.upperSideButton {
+  max-height: 35vw;
+  overflow-y: auto;
+  margin-top: 0.5vw;
+  display: flex;
+  flex-direction: column;
+  scrollbar-color: rgb(28, 30, 58) rgb(8, 14, 44);
 }
 
 .addButton {
@@ -62,8 +72,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 3rem;
-  border-radius: 0.5rem;
+  margin-bottom: 0.5vw;
+  border-radius: 0.5vw;
 }
 
 .query {
@@ -73,7 +83,8 @@ body {
   color: rgba(222, 222, 222, 1);
   padding: 1.5rem;
   width: 25rem;
-  margin: 1rem auto;
+  margin: 0.5rem;
+  margin-left: 0rem;
   border-radius: 0.5rem;
   border: 1px solid rgba(98, 98, 98, 1);
   font-size: 1.75rem;
