--- a/autovid/src/pages/promt to video/PromptToVideo.css
+++ b/autovid/src/pages/promt to video/PromptToVideo.css
@@ -16,6 +16,7 @@ body {
 .promt-to-video {
   min-height: 100vw;
   display: flex;
+  margin-top: 0.25vw;
 }
 
 .sideBar {
@@ -45,7 +46,7 @@ body {
 .upperSideTop {
   display: flex;
   align-items: center;
-  margin-bottom: 2.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .upperSideButton {
@@ -121,7 +122,7 @@ body {
 button {
   color: white;
   border: none;
-  padding: 10px 20px;
+  padding: 7.5px 7.5px;
   cursor: pointer;
 }
 
@@ -194,7 +195,6 @@ button:hover {
 
 .inp textarea {
   font-size: 2rem;
-  padding: 1rem;
   width: 100%;
   height: 5rem;
   resize: vertical;
