--- a/autovid/src/pages/promt to video/PromptToVideo.css
+++ b/autovid/src/pages/promt to video/PromptToVideo.css
@@ -325,6 +325,44 @@ p {
   cursor: not-allowed;
 }
 
+.flash {
+  animation: flash 3.75s 3;
+}
+
+@keyframes flash {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 0.9;
+  }
+  80% {
+    opacity: 0.8;
+  }
+  70% {
+    opacity: 0.7;
+  }
+  60% {
+    opacity: 0.6;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  40% {
+    opacity: 0.4;
+  }
+  /* 30% {
+    opacity: 0.3;
+  }
+  20% {
+    opacity: 0.2;
+  }
+  10% {
+    opacity: 0.1;
+  } */
+}
+
 select {
   color: #fff;
   background: #ff29629f;
