--- a/autovid/src/pages/promt to video/PromptToVideo.css
+++ b/autovid/src/pages/promt to video/PromptToVideo.css
@@ -196,6 +196,7 @@ button:hover {
 .send:disabled {
   cursor: not-allowed;
   border: 3px solid #ff2d55;
+  border-radius: 5px;
 }
 
 .inp textarea {
