--- a/autovid/src/pages/promt to video/PromptToVideo.css
+++ b/autovid/src/pages/promt to video/PromptToVideo.css
@@ -256,3 +256,32 @@ p {
   color: red;
   font-size: 1.5rem;
 }
+
+.videoLoading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: rgb(8, 14, 44);
+  font-size: 14px;
+  padding: 1rem;
+  border: 1px #ccc;
+  border-radius: 8px;
+  background-color: #b7b8c1;
+}
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 10px;
+  border: 5px solid rgba(0, 0, 0, 0.1);
+  border-top: 5px solid #4a90e2;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
