--- a/autovid/src/pages/promt to video/PromptToVideo.css
+++ b/autovid/src/pages/promt to video/PromptToVideo.css
@@ -69,7 +69,7 @@ body {
   color: white;
   padding: 1.5rem;
   font-size: 2rem;
-  width: 27.5rem;
+  width: 30rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -80,15 +80,44 @@ body {
 .query {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   background: transparent;
   color: rgba(222, 222, 222, 1);
-  padding: 1.5rem;
-  width: 27.5rem;
-  margin: 0.5rem;
-  margin-left: 0rem;
+  padding: 1.5rem 0.5rem 1.5rem 1.5rem;
+  width: 30rem;
+  margin: 0.5rem 0;
   border-radius: 0.5rem;
   border: 1px solid rgba(98, 98, 98, 1);
   font-size: 1.75rem;
+  position: relative;
+  cursor: pointer;
+}
+
+.query-left {
+  display: flex;
+  align-items: center;
+}
+
+.query-left img {
+  width: 1.75rem;
+  height: 1.75rem;
+  margin-right: 1rem;
+}
+
+.query-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.delete-icon {
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.delete-icon:hover {
+  background-color: red;
+  border-radius: 5px;
 }
 
 .query > img {
